--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -24,19 +24,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 202,
    "id": "c7775d5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = ['year', 'week', 'SMN', 'SMT', 'VCI', 'TCI', 'VHI']\n",
+    "columns = [ 'year','week', 'SMN', 'SMT', 'VCI', 'TCI', 'VHI']\n",
     "# TODO: separate tasks: 1. Download raw data; 2. Open files to united pd.DataFrame, perform \"data cleaning\"\n",
     "for i in range(1,28):    \n",
     "    url = (str(\"https://www.star.nesdis.noaa.gov/smcd/emb/vci/VH/get_TS_admin.php?country=UKR&provinceID=\"+str(i)+\"&year1=1981&year2=2024&type=Mean\"))\n",
     "    \n",
-    "    df = pd.read_csv(url, skiprows=2, names = columns) \n",
-    "   \n",
-    "    df_drop = df\n",
+    "    #df = pd.read_csv(url, skiprows=2, names = columns,header=None ) \n",
+    "    df = pd.read_csv(url, skiprows=2,header=None ) \n",
+    "    df_drop = df.rename(columns={'0':columns[0],'1':columns[1],'2':columns[2],'3':columns[3],'4':columns[4],'5':columns[5],'6':columns[6]})\n",
     "    # TODO: make relative global path with os.path.join\n",
     "    path = \"C:\\\\Users\\\\Ivan Moroz\\\\Documents\\\\Special-Programming-Sections.-Lab-Work\\\\Special-Programming-Sections.-Lab-Work\\\\Lab_1\\\\data\\\\data\" + str(i)+\".csv\"\n",
     "    df_drop.to_csv(path)\n",
@@ -45,7 +45,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": null,
+   "id": "1ee1984c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
    "id": "38f3f8a9",
    "metadata": {},
    "outputs": [
@@ -53,20 +61,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         Unnamed: 0  year   week     SMN    SMT    VCI    TCI  VHI\n",
-      "0     <tt><pre>1982   1.0  0.059  258.24  51.11  48.78  49.95  NaN\n",
-      "1              1982   2.0  0.063  261.53  55.89  38.20  47.04  NaN\n",
-      "2              1982   3.0  0.063  263.45  57.30  32.69  44.99  NaN\n",
-      "3              1982   4.0  0.061  265.10  53.96  28.62  41.29  NaN\n",
-      "4              1982   5.0  0.058  266.42  46.87  28.57  37.72  NaN\n",
-      "...             ...   ...    ...     ...    ...    ...    ...  ...\n",
-      "2232           2024  49.0  0.079  265.31  47.19  38.54  42.85  NaN\n",
-      "2233           2024  50.0  0.072  263.73  45.70  35.98  40.84  NaN\n",
-      "2234           2024  51.0  0.066  262.95  46.70  31.37  39.04  NaN\n",
-      "2235           2024  52.0  0.068  263.70  54.23  25.75  39.99  NaN\n",
-      "2236    </pre></tt>   NaN    NaN     NaN    NaN    NaN    NaN  NaN\n",
+      "      Unnamed: 0           year  week    SMN     SMT    VCI    TCI    VHI   7\n",
+      "0              0  <tt><pre>1982   1.0  0.059  258.24  51.11  48.78  49.95 NaN\n",
+      "1              1           1982   2.0  0.063  261.53  55.89  38.20  47.04 NaN\n",
+      "2              2           1982   3.0  0.063  263.45  57.30  32.69  44.99 NaN\n",
+      "3              3           1982   4.0  0.061  265.10  53.96  28.62  41.29 NaN\n",
+      "4              4           1982   5.0  0.058  266.42  46.87  28.57  37.72 NaN\n",
+      "...          ...            ...   ...    ...     ...    ...    ...    ...  ..\n",
+      "2232        2232           2024  49.0  0.079  265.31  47.19  38.54  42.85 NaN\n",
+      "2233        2233           2024  50.0  0.072  263.73  45.70  35.98  40.84 NaN\n",
+      "2234        2234           2024  51.0  0.066  262.95  46.70  31.37  39.04 NaN\n",
+      "2235        2235           2024  52.0  0.068  263.70  54.23  25.75  39.99 NaN\n",
+      "2236        2236    </pre></tt>   NaN    NaN     NaN    NaN    NaN    NaN NaN\n",
       "\n",
-      "[2237 rows x 8 columns]\n"
+      "[2237 rows x 9 columns]\n"
      ]
     }
    ],
@@ -74,7 +82,8 @@
     "df = pd.read_csv(\"C:\\\\Users\\\\Ivan Moroz\\\\Documents\\\\Special-Programming-Sections.-Lab-Work\\\\Special-Programming-Sections.-Lab-Work\\\\Lab_1\\\\data\\\\data10.csv\")\n",
     "\n",
     "missing_values_count = df.isnull().sum()\n",
-    "print(df)"
+    "df_drop = df.rename(columns={'0':columns[0],'1':columns[1],'2':columns[2],'3':columns[3],'4':columns[4],'5':columns[5],'6':columns[6]})\n",
+    "print(df_drop)"
    ]
   }
  ],
