--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -15,75 +15,357 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib.request import Request,urlopen\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "#from urllib.request import Request,urlopen\n",
+    "#import pandas as pd\n",
+    "#import numpy as np\n",
+    "\n",
     "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
-   "id": "c7775d5f",
+   "execution_count": 84,
+   "id": "573799fe",
    "metadata": {},
    "outputs": [],
    "source": [
-    "columns = [ 'year','week', 'SMN', 'SMT', 'VCI', 'TCI', 'VHI']\n",
-    "# TODO: separate tasks: 1. Download raw data; 2. Open files to united pd.DataFrame, perform \"data cleaning\"\n",
-    "for i in range(1,28):    \n",
-    "    url = (str(\"https://www.star.nesdis.noaa.gov/smcd/emb/vci/VH/get_TS_admin.php?country=UKR&provinceID=\"+str(i)+\"&year1=1981&year2=2024&type=Mean\"))\n",
-    "    \n",
-    "    #df = pd.read_csv(url, skiprows=2, names = columns,header=None ) \n",
-    "    df = pd.read_csv(url, skiprows=2,header=None ) \n",
-    "    df_drop = df.rename(columns={'0':columns[0],'1':columns[1],'2':columns[2],'3':columns[3],'4':columns[4],'5':columns[5],'6':columns[6]})\n",
-    "    # TODO: make relative global path with os.path.join\n",
-    "    path = \"C:\\\\Users\\\\Ivan Moroz\\\\Documents\\\\Special-Programming-Sections.-Lab-Work\\\\Special-Programming-Sections.-Lab-Work\\\\Lab_1\\\\data\\\\data\" + str(i)+\".csv\"\n",
-    "    df_drop.to_csv(path)\n",
-    "    "
+    "import os\n",
+    "import urllib.request\n",
+    "from datetime import datetime\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ee1984c",
+   "id": "c7775d5f",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#columns = [ 'year','week', 'SMN', 'SMT', 'VCI', 'TCI', 'VHI']\n",
+    "# TODO: separate tasks: 1. Download raw data; 2. Open files to united pd.DataFrame, perform \"data cleaning\"\n",
+    "#for i in range(1,28):    \n",
+    "    #url = (str(\"https://www.star.nesdis.noaa.gov/smcd/emb/vci/VH/get_TS_admin.php?country=UKR&provinceID=\"+str(i)+\"&year1=1981&year2=2024&type=Mean\"))\n",
+    "    \n",
+    "    #df = pd.read_csv(url, skiprows=2, names = columns,header=None ) \n",
+    "    #df = pd.read_csv(url, skiprows=2,header=None ) \n",
+    "    #df_drop = df#.rename(columns={'0':columns[0],'1':columns[1],'2':columns[2],'3':columns[3],'4':columns[4],'5':columns[5],'6':columns[6]})\n",
+    "    # TODO: make relative global path with os.path.join\n",
+    "    #path = \"C:\\\\Users\\\\Ivan Moroz\\\\Documents\\\\Special-Programming-Sections.-Lab-Work\\\\Special-Programming-Sections.-Lab-Work\\\\Lab_1\\\\data\\\\data\" + str(i)+\".csv\"\n",
+    "    #df_drop.to_csv(path)\n",
+    "    "
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 216,
+   "execution_count": 83,
+   "id": "07286c97",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "BASE_URL = \"https://www.star.nesdis.noaa.gov/smcd/emb/vci/VH/get_TS_admin.php\"\n",
+    "YEARS = (1981, 2024)  # період\n",
+    "SAVE_DIR = \"data\"\n",
+    "os.makedirs(SAVE_DIR, exist_ok=True)\n",
+    "PROVINCES = {\n",
+    "    1: \"Vinnytsia\", 2: \"Volyn\", 3: \"Dnipropetrovsk\", 4: \"Donetsk\",\n",
+    "    5: \"Zhytomyr\", 6: \"Zakarpattia\", 7: \"Zaporizhzhia\", 8: \"Ivano-Frankivsk\",\n",
+    "    9: \"Kyiv\", 10: \"Kirovohrad\", 11: \"Luhansk\", 12: \"Lviv\",\n",
+    "    13: \"Mykolaiv\", 14: \"Odesa\", 15: \"Poltava\", 16: \"Rivne\",\n",
+    "    17: \"Sumy\", 18: \"Ternopil\", 19: \"Kharkiv\", 20: \"Kherson\",\n",
+    "    21: \"Khmelnytskyi\", 22: \"Cherkasy\", 23: \"Chernivtsi\",\n",
+    "    24: \"Chernihiv\", 25: \"Crimea\", 26: \"Kyiv City\", 27: \"Sevastopol\"\n",
+    "}\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "2c5f5a62",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === 1. Завантаження файлу ===\n",
+    "def download_vhi(province_id, province_name):\n",
+    "    \"\"\"Завантаження VHI-файлу для області\"\"\"\n",
+    "    params = f\"?country=UKR&provinceID={province_id}&year1={YEARS[0]}&year2={YEARS[1]}&type=Mean\"\n",
+    "    url = BASE_URL + params\n",
+    "    filename = f\"VHI_{province_id}_{province_name}.txt\"\n",
+    "    filepath = os.path.join(SAVE_DIR, filename)\n",
+    "\n",
+    "    if os.path.exists(filepath):\n",
+    "        print(f\"[i] Файл для {province_name} уже есть, пропуск...\")\n",
+    "        return filepath\n",
+    "\n",
+    "    try:\n",
+    "        print(f\"[↓] Завантаження {province_name}...\")\n",
+    "        urllib.request.urlretrieve(url, filepath)\n",
+    "        print(f\"[✓] Збережено: {filepath}\")\n",
+    "        filepath = download_vhi(pid, pname)\n",
+    "        print(pid, pname, filepath)\n",
+    "        return filepath\n",
+    "    except Exception as e:\n",
+    "        print(f\"[!] Помилка завантаження {province_name}: {e}\")\n",
+    "        return None"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "38f3f8a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#df = pd.read_csv(\"C:\\\\Users\\\\Ivan Moroz\\\\Documents\\\\Special-Programming-Sections.-Lab-Work\\\\Special-Programming-Sections.-Lab-Work\\\\Lab_1\\\\data\\\\data10.csv\")\n",
+    "\n",
+    "#missing_values_count = df.isnull().sum()\n",
+    "#df_drop = df.rename(columns={'0':columns[0],'1':columns[1],'2':columns[2],'3':columns[3],'4':columns[4],'5':columns[5],'6':columns[6]})\n",
+    "#print(df_drop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e762a722",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === 2. Читання одного файлу ===\n",
+    "def read_vhi_file(filepath, province_id, province_name):   \n",
+    "    try:\n",
+    "        df = pd.read_csv(\n",
+    "            filepath,\n",
+    "            sep=\",\",  # теперь разделитель - запятая\n",
+    "            engine=\"python\",\n",
+    "            names=[\"year\",\"week\",\"SMN\",\"SMT\",\"VCI\",\"TCI\",\"VHI\",\"extra\"],  # добавляем лишнюю колонку\n",
+    "            skip_blank_lines=True\n",
+    "        )\n",
+    "        # Убираем лишнюю колонку, которая пустая\n",
+    "        if \"extra\" in df.columns:\n",
+    "            df = df.drop(columns=[\"extra\"])\n",
+    "\n",
+    "        # Преобразуем колонки в нужный тип\n",
+    "        df = df.astype({\n",
+    "            \"year\": int,\n",
+    "            \"week\": int,\n",
+    "            \"SMN\": float,\n",
+    "            \"SMT\": float,\n",
+    "            \"VCI\": float,\n",
+    "            \"TCI\": float,\n",
+    "            \"VHI\": float\n",
+    "        })\n",
+    "\n",
+    "        # Заполняем пропуски\n",
+    "        df = df.fillna(method='ffill').fillna(method='bfill')\n",
+    "\n",
+    "        # Добавляем колонки области\n",
+    "        df['province_id'] = province_id\n",
+    "        df['province_name'] = province_name\n",
+    "        return df\n",
+    "    except Exception as e:\n",
+    "        print(f\"[!] Помилка обробки {province_name}: {e}\")\n",
+    "        return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "e6b1c729",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === 3. Об'єднання всіх областей ===\n",
+    "def load_all_vhi():\n",
+    "    all_dfs = []\n",
+    "    for pid, pname in PROVINCES.items():\n",
+    "        filepath = download_vhi(pid, pname)\n",
+    "        if filepath:\n",
+    "            df = read_vhi_file(filepath, pid, pname)\n",
+    "            if not df.empty:\n",
+    "                all_dfs.append(df)\n",
+    "\n",
+    "    if all_dfs:\n",
+    "        return pd.concat(all_dfs, ignore_index=True)\n",
+    "    else:\n",
+    "        return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "a8d46234",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def reindex_provinces_ukr(df):    \n",
+    "    # Сопоставление английских названий с украинскими\n",
+    "    english_to_ukr = {\n",
+    "        \"Vinnytsia\": \"Вінницька\", \"Volyn\": \"Волинська\", \"Dnipropetrovsk\": \"Дніпропетровська\",\n",
+    "        \"Donetsk\": \"Донецька\", \"Zhytomyr\": \"Житомирська\", \"Zakarpattia\": \"Закарпатська\",\n",
+    "        \"Zaporizhzhia\": \"Запорізька\", \"Ivano-Frankivsk\": \"Івано-Франківська\", \"Kyiv\": \"Київська\",\n",
+    "        \"Kirovohrad\": \"Кіровоградська\", \"Luhansk\": \"Луганська\", \"Lviv\": \"Львівська\",\n",
+    "        \"Mykolaiv\": \"Миколаївська\", \"Odesa\": \"Одеська\", \"Poltava\": \"Полтавська\",\n",
+    "        \"Rivne\": \"Рівненська\", \"Sumy\": \"Сумська\", \"Ternopil\": \"Тернопільська\",\n",
+    "        \"Kharkiv\": \"Харківська\", \"Kherson\": \"Херсонська\", \"Khmelnytskyi\": \"Хмельницька\",\n",
+    "        \"Cherkasy\": \"Черкаська\", \"Chernivtsi\": \"Чернівецька\", \"Chernihiv\": \"Чернігівська\",\n",
+    "        \"Crimea\": \"Крим\", \"Kyiv City\": \"м.Київ\", \"Sevastopol\": \"Севастополь\"\n",
+    "    }\n",
+    "\n",
+    "    # Украинские названия по алфавиту\n",
+    "    ukr_provinces_sorted = [\n",
+    "        \"Вінницька\", \"Волинська\", \"Дніпропетровська\", \"Донецька\", \"Житомирська\",\n",
+    "        \"Закарпатська\", \"Запорізька\", \"Івано-Франківська\", \"Київська\", \"Кіровоградська\",\n",
+    "        \"Луганська\", \"Львівська\", \"Миколаївська\", \"Одеська\", \"Полтавська\",\n",
+    "        \"Рівненська\", \"Сумська\", \"Тернопільська\", \"Харківська\", \"Херсонська\",\n",
+    "        \"Хмельницька\", \"Черкаська\", \"Чернівецька\", \"Чернігівська\", \"Крим\",\n",
+    "        \"м.Київ\", \"Севастополь\"\n",
+    "    ]\n",
+    "    ukr_index_map = {name: idx + 1 for idx, name in enumerate(ukr_provinces_sorted)}\n",
+    "\n",
+    "    # Копируем DataFrame, чтобы не менять оригинал\n",
+    "    df = df.copy()\n",
+    "    df['province_id'] = df['province_name'].map(english_to_ukr).map(ukr_index_map)\n",
+    "    df['province_name'] = df['province_name'].map(english_to_ukr)\n",
+    "    # Преобразуем английские имена в украинские, затем присваиваем ID по алфавиту\n",
+    "   \n",
+    "    #df['province_name'] = df['province_name'].map(english_to_ukr)\n",
+    "    # Проверка: если остались NaN\n",
+    "    missing = df[df['province_id'].isna()]['province_name'].unique()\n",
+    "    if len(missing) > 0:\n",
+    "        print(\"[!] Не найденные названия для переиндексации:\", missing)\n",
+    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96cb0b99",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Основний блок ===\n",
+    "if __name__ == \"__main__\":\n",
+    "    df_all = load_all_vhi()\n",
+    "    if not df_all.empty:  \n",
+    "        \n",
+    "        print(check.sort_values('province_id_new'))     \n",
+    "        df_all = reindex_provinces_ukr(df_all)\n",
+    "        df_all.to_csv(\"all_vhi_cleaned.csv\", index=False)        \n",
+    "        print(\"[✓] Дані збережено у all_vhi_cleaned.csv\")\n",
+    "        print(df_all.head())\n",
+    "        \n",
+    "        print(check.sort_values('province_id_new'))\n",
+    "    else:\n",
+    "        pass\n",
+    "        #print(\"[!] Дані не були завантажені\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 145,
+   "id": "4c4fbc15",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vhi_by_region_year(df, province_name, year):\n",
+    "    \"\"\"\n",
+    "    Повертає ряд VHI для конкретної області за вказаний рік.\n",
+    "    \n",
+    "    df : pd.DataFrame\n",
+    "    province_name : str - назва області українською\n",
+    "    year : int - рік\n",
+    "    \"\"\"\n",
+    "    filtered = df[(df['province_name'] == province_name) & (df['year'] == year)]\n",
+    "    return filtered[['year', 'week', 'VHI', 'province_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
+   "id": "1f43bc7e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vhi_by_regions_years(df, provinces, year_start, year_end):\n",
+    "    \"\"\"\n",
+    "    Повертає ряд VHI для кількох областей за вказаний діапазон років.\n",
+    "    \n",
+    "    provinces : list[str] - список областей українською\n",
+    "    year_start : int\n",
+    "    year_end : int\n",
+    "    \"\"\"\n",
+    "    filtered = df[\n",
+    "        (df['province_name'].isin(provinces)) &\n",
+    "        (df['year'] >= year_start) &\n",
+    "        (df['year'] <= year_end)\n",
+    "    ]\n",
+    "    return filtered[['year', 'week', 'VHI', 'province_name']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 147,
+   "id": "ea8fad2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vhi_stats(df, provinces, years):\n",
+    "    \"\"\"\n",
+    "    Обчислює min, max, mean, median VHI для вказаних областей та років.\n",
+    "    \n",
+    "    provinces : list[str] - список областей\n",
+    "    years : list[int] - список років\n",
+    "    \"\"\"\n",
+    "    filtered = df[\n",
+    "        (df['province_name'].isin(provinces)) &\n",
+    "        (df['year'].isin(years))\n",
+    "    ]\n",
+    "    \n",
+    "    stats = filtered.groupby('province_name')['VHI'].agg(['min','max','mean','median']).reset_index()\n",
+    "    return stats"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "id": "04fe9411",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "      Unnamed: 0           year  week    SMN     SMT    VCI    TCI    VHI   7\n",
-      "0              0  <tt><pre>1982   1.0  0.059  258.24  51.11  48.78  49.95 NaN\n",
-      "1              1           1982   2.0  0.063  261.53  55.89  38.20  47.04 NaN\n",
-      "2              2           1982   3.0  0.063  263.45  57.30  32.69  44.99 NaN\n",
-      "3              3           1982   4.0  0.061  265.10  53.96  28.62  41.29 NaN\n",
-      "4              4           1982   5.0  0.058  266.42  46.87  28.57  37.72 NaN\n",
-      "...          ...            ...   ...    ...     ...    ...    ...    ...  ..\n",
-      "2232        2232           2024  49.0  0.079  265.31  47.19  38.54  42.85 NaN\n",
-      "2233        2233           2024  50.0  0.072  263.73  45.70  35.98  40.84 NaN\n",
-      "2234        2234           2024  51.0  0.066  262.95  46.70  31.37  39.04 NaN\n",
-      "2235        2235           2024  52.0  0.068  263.70  54.23  25.75  39.99 NaN\n",
-      "2236        2236    </pre></tt>   NaN    NaN     NaN    NaN    NaN    NaN NaN\n",
-      "\n",
-      "[2237 rows x 9 columns]\n"
+      "       year  week    VHI province_name\n",
+      "19387  2011     1  39.77      Київська\n",
+      "19388  2011     2  38.20      Київська\n",
+      "19389  2011     3  38.36      Київська\n",
+      "19390  2011     4  39.36      Київська\n",
+      "19391  2011     5  41.32      Київська\n",
+      "       year  week    VHI province_name\n",
+      "19335  2010     1  50.19      Київська\n",
+      "19336  2010     2  48.41      Київська\n",
+      "19337  2010     3  47.55      Київська\n",
+      "19338  2010     4  47.77      Київська\n",
+      "19339  2010     5  48.36      Київська\n",
+      "  province_name    min    max       mean  median\n",
+      "0     Вінницька  28.04  72.75  44.589744  42.680\n",
+      "1      Київська  19.42  69.48  39.700577  39.105\n",
+      "2     Львівська  26.81  62.09  43.638718  44.460\n"
      ]
     }
    ],
    "source": [
-    "df = pd.read_csv(\"C:\\\\Users\\\\Ivan Moroz\\\\Documents\\\\Special-Programming-Sections.-Lab-Work\\\\Special-Programming-Sections.-Lab-Work\\\\Lab_1\\\\data\\\\data10.csv\")\n",
+    "# ряд VHI для Києва за 2011\n",
+    "print(vhi_by_region_year(df_all, \"Київська\", 2011).head())\n",
     "\n",
-    "missing_values_count = df.isnull().sum()\n",
-    "df_drop = df.rename(columns={'0':columns[0],'1':columns[1],'2':columns[2],'3':columns[3],'4':columns[4],'5':columns[5],'6':columns[6]})\n",
-    "print(df_drop)"
+    "# ряд VHI для Києва та Львова за 2010-2012\n",
+    "print(vhi_by_regions_years(df_all, [\"Київська\",\"Львівська\"], 2010, 2012).head())\n",
+    "\n",
+    "# статистика для Києва та Львова за 2010-2012\n",
+    "print(vhi_stats(df_all, [\"Київська\",\"Львівська\",\"Вінницька\"], [2010,2011,2012]))\n",
+    "\n"
    ]
   }
  ],
