--- a/Lab_1/lab1.ipynb
+++ b/Lab_1/lab1.ipynb
@@ -5,12 +5,43 @@
    "id": "9184a7c3",
    "metadata": {},
    "source": [
-    "<h1> Лабороторна робота N1\n"
+    "<h1> Лабороторна робота N1\n",
+    "<h3>Частина 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34af8d27",
+   "metadata": {},
+   "source": [
+    "<h4>Хід виконання роботи\n",
+    "<ul>\n",
+    "<li>Створити віртуальне середовище (venv) в якому будуть встановлені всі необхідні бібліотеки та налаштування для даної лабораторної роботи;</li>\n",
+    "<li>Для кожної з адміністративних одиниць України завантажити (urllib) тестові структуровані файли, що містять значення VHI-індексу. При зберіганні файлу, до його імені потрібно додати дату та час завантаження. Передбачити повторні запуски скрипту, реалізувати механізм запобігання повторного довантаження та колізії даних;</li>\n",
+    "\n",
+    "<li>Зчитати завантажені текстові файли у pandas dataframe. Здійснити data cleaning: прибрати зайві стовпці, заповнити пропуски, видалити зайвий текст тощо. \n",
+    "Додати стовпчики з назвою та індексом області </li>\n",
+    "<li>Реалізувати процедуру зміни індексів: в завантажених з NOAA даних області індексуються за англійською абеткою (Province 1 - Cherkasy), потрібно замінити індекси так, щоб області індексувались за українською абеткою (1 область - Вінницька). \n",
+    "Реалізувати процедури для формування вибірок (https://www.geeksforgeeks.org/pandas/ways-to-filter-pandas-dataframe-by-column-values/)  наступного виду:\n",
+    "<ul><li>Ряд VHI для області за вказаний рік;</li>\n",
+    "<li>Ряд VHI за вказаний діапазон років для вказаних областей;</li>\n",
+    "<li>Пошук екстремумів (min та max) для вказаних областей та років, середнього, медіани;</li>\n",
+    "<li>Інші вибірки на вимогу викладача.</li></ul></li>\n",
+    "Всі процедури необхідно реалізувати окремими функціями та викликати їх в окремих комірках Jupyter Notebook. Додати текст завдань перед кожним пунктом та читабельний вивід функцій. \n",
+    "</ul>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "781ce2af",
+   "metadata": {},
+   "source": [
+    "Імпорт потрібних бібліотек"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "573799fe",
    "metadata": {},
    "outputs": [],
@@ -19,8 +50,15 @@
     "import urllib.request\n",
     "import numpy as np\n",
     "from datetime import datetime\n",
-    "import pandas as pd\n",
-    "import timeit"
+    "import pandas as pd\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eb50a8ff",
+   "metadata": {},
+   "source": [
+    "Створення  потрібних змін для загрузки даних"
    ]
   },
   {
@@ -43,6 +81,15 @@
     "    21: \"Khmelnytskyi\", 22: \"Cherkasy\", 23: \"Chernivtsi\",\n",
     "    24: \"Chernihiv\", 25: \"Crimea\", 26: \"Kyiv City\", 27: \"Sevastopol\"\n",
     "}\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b90ff735",
+   "metadata": {},
+   "source": [
+    "Для кожної з адміністративних одиниць України завантажити (urllib) тестові структуровані файли, що містять значення VHI-індексу. При зберіганні файлу, до його імені потрібно додати дату та час завантаження. Передбачити повторні запуски скрипту, реалізувати механізм запобігання повторного довантаження та колізії даних;\n",
+    "Для цього створюю функцію download_vhi."
    ]
   },
   {
@@ -72,6 +119,14 @@
     "    except Exception as e:\n",
     "        print(f\"[!] Помилка завантаження {province_name}: {e}\")\n",
     "        return None"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "78b7437a",
+   "metadata": {},
+   "source": [
+    "Функція що робить data-clining та зчитування даних."
    ]
   },
   {
@@ -138,6 +193,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "6cbb8cbf",
+   "metadata": {},
+   "source": [
+    "Функція що об`єднує все в один DataFrame."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 6,
    "id": "e6b1c729",
@@ -158,6 +221,14 @@
     "        return pd.concat(all_dfs, ignore_index=True)\n",
     "    else:\n",
     "        return pd.DataFrame()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d79c51f",
+   "metadata": {},
+   "source": [
+    "Фуекція що реалізує процедуру зміни індексів: в завантажених з NOAA даних області індексуються за англійською абеткою (Province 1 - Cherkasy), воно замінює індекси так, щоб області індексувались за українською абеткою (1 область - Вінницька)."
    ]
   },
   {
@@ -205,6 +276,14 @@
     "        print(\"[!] Не найденные названия для переиндексации:\", missing)\n",
     "\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac13a95b",
+   "metadata": {},
+   "source": [
+    "Основний блок що виконує, завантаження, зчитування, то об'єднання даних."
    ]
   },
   {
@@ -328,6 +407,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "7deab271",
+   "metadata": {},
+   "source": [
+    "Функція що виводить ряд VHI для області за вказаний рік;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "4c4fbc15",
@@ -344,6 +431,14 @@
     "    \"\"\"\n",
     "    filtered = df[(df['province_name'] == province_name) & (df['year'] == year)]\n",
     "    return filtered[['year', 'week', 'VHI', 'province_name']]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a3546fc2",
+   "metadata": {},
+   "source": [
+    "Функція що виводить ряд VHI за вказаний діапазон років для вказаних областей;\n"
    ]
   },
   {
@@ -370,6 +465,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "ecd7ef5c",
+   "metadata": {},
+   "source": [
+    "Функція що робить пошук екстремумів (min та max) для вказаних областей та років, середнього, медіани;"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "ea8fad2c",
@@ -390,6 +493,14 @@
     "    \n",
     "    stats = filtered.groupby('province_name')['VHI'].agg(['min','max','mean','median']).reset_index()\n",
     "    return stats"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cecd875d",
+   "metadata": {},
+   "source": [
+    "Демонстрація ціх функцій."
    ]
   },
   {
