--- a/Lab_1/lab1_pert_2.ipynb
+++ b/Lab_1/lab1_pert_2.ipynb
@@ -5,7 +5,34 @@
    "id": "23271d6d",
    "metadata": {},
    "source": [
-    "Частина 2\n"
+    "<h1> Лабороторна робота N1\n",
+    "<h3>Частина 2</h3>\n",
+    "Необхідно виконати завдання, використовуючи  pandas dataframe, проаналізувати часові витрати на виконання процедур (профілювання часу виконання здійснити за допомогою модуля timeit).\n",
+    "<ul><li>Звантажити та відкрити (вручну або через запропонований скрипт на сайті) наступний датасет: Individual Household Electric Power Consumption Dataset \n",
+    "</li>\n",
+    "<li>Здійснити data cleaning</li>\n",
+    "<li>Окремими функціями сформувати вибірки:<ul><li>Обрати всі записи, у яких загальна активна споживана потужність перевищує 5 кВт.</li>\n",
+    "    <li>Обрати всі записи, у яких сила струму лежить в межах 19-20 А, для них виявити ті, у яких пральна машина та холодильних споживають більше, ніж бойлер та кондиціонер.\n",
+    "</li>\n",
+    "    <li>Обрати випадковим чином 500000 записів (без повторів елементів вибірки), для них обчислити середні величини усіх 3-х груп споживання електричної енергії\n",
+    "</li>\n",
+    "    <li>Обрати ті записи, які після 18-00 споживають понад 6 кВт за хвилину в середньому, серед відібраних визначити ті, у яких основне споживання електроенергії у вказаний проміжок часу припадає на пральну машину, сушарку, холодильник та освітлення (група 2 є найбільшою), а потім обрати кожен третій результат із першої половини та кожен четвертий результат із другої половини.</li>\n",
+    "    </ul>\n",
+    "</li>\n",
+    "<li>Пронормувати та стандартизувати вибраний датасет\n",
+    "</li>\n",
+    "<li>Підрахувати коефіцієнт Пірсона та Спірмена для двох integer/real атрибутів.</li>\n",
+    "<li>Провести One Hot Encoding категоріального атрибута.\n",
+    "</li>\n",
+    "</ul>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69ca48d0",
+   "metadata": {},
+   "source": [
+    "Імпорт потрібних бібліотек"
    ]
   },
   {
@@ -18,6 +45,14 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import timeit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3b755371",
+   "metadata": {},
+   "source": [
+    "Завантаження датасету, та зчитування його"
    ]
   },
   {
@@ -85,6 +120,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c5b4e52a",
+   "metadata": {},
+   "source": [
+    "Підрахунок порожніх клітинок"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "id": "3c65aaf1",
@@ -123,14 +166,11 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "820b66ee",
+   "cell_type": "markdown",
+   "id": "b4768cdf",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# Заповнимо пропуски середнім значенням\n",
-    "df.fillna(df.mean(), inplace=True)"
+    "Блок коду що дає змогу працювати з часовими даними."
    ]
   },
   {
@@ -146,8 +186,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b8af55d9",
+   "metadata": {},
+   "source": [
+    "Перевірка часу виконання очищення даних."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "id": "a7b37867",
    "metadata": {},
    "outputs": [
@@ -155,7 +203,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Середній час виконання: 0.47377 секунд\n"
+      "Середній час виконання: 0.47655 секунд\n"
      ]
     }
    ],
@@ -174,6 +222,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "811dbfb0",
+   "metadata": {},
+   "source": [
+    "Нвступний блокі коду, де представлені функції що формують вибірки."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "610342b3",
+   "metadata": {},
+   "source": [
+    "Вибірка за Global_active_power > 5 кВт"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 7,
    "id": "020cf0ea",
@@ -183,6 +247,16 @@
     "def filter_active_power(df, threshold=5):\n",
     "    \"\"\"Обрати записи, де Global_active_power перевищує threshold кВт\"\"\"\n",
     "    return df[df['Global_active_power'] > threshold]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4e751f45",
+   "metadata": {},
+   "source": [
+    "Вибірка за струмом 19-20 А та порівняння груп споживання. \n",
+    "Група 1 (пральна машина + холодильник) = Sub_metering_1 + Sub_metering_2\n",
+    "Група 2 (бойлер + кондиціонер) = Sub_metering_3 + Global_reactive_power (приклад, оскільки кондиціонера в датасеті немає)"
    ]
   },
   {
@@ -200,6 +274,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "04076aa6",
+   "metadata": {},
+   "source": [
+    "Випадкова вибірка 500000 записів та середні значення груп"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "id": "164eca61",
@@ -213,6 +295,14 @@
     "    sample['group3'] = sample['Sub_metering_3']\n",
     "    means = sample[['group1','group2','group3']].mean()\n",
     "    return sample, means"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4c5282f2",
+   "metadata": {},
+   "source": [
+    "Вибірка після 18:00 з основним споживанням на групі 2 та підбір кожного N-го"
    ]
   },
   {
@@ -244,6 +334,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e803464",
+   "metadata": {},
+   "source": [
+    "Нормалізація та стандартизація"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "01c18834",
@@ -263,14 +361,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "a901430c",
+   "metadata": {},
+   "source": [
+    "Підрахунок коефіцієнтів Пірсона та Спірмена"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "0e036357",
    "metadata": {},
    "outputs": [],
    "source": [
     "def correlation(df, col1, col2):\n",
-    "    # Пірсон (як раніше)\n",
+    "    # Пірсон \n",
     "    pearson = df[col1].corr(df[col2], method='pearson')\n",
     "    \n",
     "    # Спірмен (через ранги)\n",
@@ -278,6 +384,14 @@
     "    rank2 = df[col2].rank()\n",
     "    spearman = rank1.corr(rank2)  # кореляція Пірсона між рангами\n",
     "    return pearson, spearman"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "becb3373",
+   "metadata": {},
+   "source": [
+    "One Hot Encoding категоріального атрибута"
    ]
   },
   {
@@ -289,6 +403,22 @@
    "source": [
     "def one_hot_encode(df, col):\n",
     "    return pd.get_dummies(df, columns=[col], prefix=[col])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a87894cb",
+   "metadata": {},
+   "source": [
+    "Наступний блок коду, це демонстрація кожної з цих функцій"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "60c37e3d",
+   "metadata": {},
+   "source": [
+    "Вибірка за Global_active_power > 5 кВт"
    ]
   },
   {
@@ -353,6 +483,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "d5fb7b02",
+   "metadata": {},
+   "source": [
+    "Вибірка за струмом 19-20 А та порівняння груп споживання"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 19,
    "id": "8aec70a1",
@@ -411,6 +549,14 @@
    "source": [
     "df_current = filter_current_and_compare(df)\n",
     "print(df_current)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "493238fe",
+   "metadata": {},
+   "source": [
+    "Випадкова вибірка 500000 записів та середні значення груп"
    ]
   },
   {
@@ -475,6 +621,14 @@
    "source": [
     "sample, means = random_sample_means(df)\n",
     "print(sample,means)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7defe0fd",
+   "metadata": {},
+   "source": [
+    "Вибірка після 18:00 з основним споживанням на групі 2 та підбір кожного N-го"
    ]
   },
   {
@@ -560,6 +714,14 @@
    "source": [
     "evening_df = evening_selection(df)\n",
     "print(evening_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "950cdc2e",
+   "metadata": {},
+   "source": [
+    "Нормалізація та стандартизація"
    ]
   },
   {
@@ -652,6 +814,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c61afc7e",
+   "metadata": {},
+   "source": [
+    "Підрахунок коефіцієнтів Пірсона та Спірмена"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "id": "1df48ec1",
@@ -668,6 +838,14 @@
    "source": [
     "pearson, spearman = correlation(df, 'Global_active_power', 'Voltage')\n",
     "print(pearson,spearman)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "53deb01f",
+   "metadata": {},
+   "source": [
+    "One Hot Encoding категоріального атрибута"
    ]
   },
   {
